--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,9 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Ignore node modules
+client/node_modules
+
+#Ignore node modules for backend
+/node_modules
