--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "material-ui": "^0.20.2",
+    "react-bootstrap": "^2.7.0",
     "react-floating-button-menu": "^2.1.1",
     "react-highlight-pop": "^1.0.2",
     "uuid": "^9.0.0",
