--- a/config/database.yml
+++ b/config/database.yml
@@ -11,15 +11,15 @@ default: &default
 
 development:
   <<: *default
-  database: revieword_database
+  database: "revieword_database"
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: revieword_database
+  database: "revieword_database"
 
-production:
-  <<: *default
-  database: <%=ENV['DATABASE_URL'] %>
+# production:
+#   <<: *default
+#   database: <%=ENV['DATABASE_URL'] %>
