--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "react-highlight-pop": "^1.0.2",
     "react-markdown": "^6.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
