added back user and pass

--- a/config/database.yml
+++ b/config/database.yml
@@ -82,4 +82,5 @@ test:
 production:
   <<: *default
   database: revieword_production
-
+  username: reviewordbackend
+  password: <%= ENV["REVIEWORD_DATABASE_PASSWORD"] %>
