added backend node modules to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,6 @@
 ./client/.gitignore
 ./client/package-lock.json
 
-./revieword-express-backend/.node_modules
+./revieword-express-backend/node_modules
 ./revieword-express-backend/.gitignore
 ./revieword-express-backend/package-lock.json
