--- a/client/.env.devlopment
+++ b/client/.env.devlopment
@@ -1,1 +1,1 @@
-REACT_APP_API_BASE_URL='https://shrouded-oasis-87140.herokuapp.com'
+REACT_APP_API_BASE_URL='https://revieword-backend.onrender.com'
